初步添加了UI

--- a/LibraryManagementSystem/packages.config
+++ b/LibraryManagementSystem/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AvalonEdit" version="6.0.1" targetFramework="net48" />
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net48" />
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net48" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net48" />
@@ -28,6 +29,7 @@
   <package id="Serilog.Sinks.Trace" version="2.1.0" targetFramework="net48" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.ComponentModel.Composition" version="4.7.0" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.8.1" targetFramework="net48" />
   <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
