--- a/LibraryManagementSystem/LibraryManagementSystem.csproj
+++ b/LibraryManagementSystem/LibraryManagementSystem.csproj
@@ -381,6 +381,10 @@
     <Resource Include="Resources\Imgs\Logo_large.png" />
     <Resource Include="Resources\Imgs\Logo_min.png" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Imgs\Backgrounds\cloud.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.113.1\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.113.1\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
