--- a/LibraryManagementSystem/LibraryManagementSystem.csproj
+++ b/LibraryManagementSystem/LibraryManagementSystem.csproj
@@ -40,6 +40,9 @@
   <PropertyGroup>
     <StartupObject>LibraryManagementSystem.App</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\Imgs\Logo_min.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.6.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
       <HintPath>..\packages\BouncyCastle.1.8.6.1\lib\BouncyCastle.Crypto.dll</HintPath>
@@ -280,12 +283,16 @@
     <Compile Include="Utilities\FileUtility.cs" />
     <Compile Include="Utilities\JsonUtility.cs" />
     <Compile Include="ViewModels\BooksViewModel.cs" />
+    <Compile Include="ViewModels\BorrowLogsViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
     <Compile Include="ViewModels\LogInViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ToBeReturnedViewModel.cs" />
     <Compile Include="Views\BooksView.xaml.cs">
       <DependentUpon>BooksView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\BorrowLogsView.xaml.cs">
+      <DependentUpon>BorrowLogsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RegisterView.cs">
       <DependentUpon>RegisterView.xaml</DependentUpon>
@@ -320,6 +327,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\BooksView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\BorrowLogsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -381,7 +392,9 @@
     <Resource Include="Resources\Imgs\Logo_large.png" />
     <Resource Include="Resources\Imgs\Logo_min.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Imgs\Logo_min.ico" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Imgs\Backgrounds\cloud.png" />
   </ItemGroup>
