--- a/LibraryManagementSystem/packages.config
+++ b/LibraryManagementSystem/packages.config
@@ -15,8 +15,8 @@
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net48" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="3.1.4" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="3.1.4" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="3.1.5" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="3.1.5" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="MySql.Data" version="8.0.20" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
@@ -34,6 +34,7 @@
   <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reactive" version="4.4.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net48" />
   <package id="System.Text.Json" version="4.7.2" targetFramework="net48" />
