--- a/LibraryManagementSystem/packages.config
+++ b/LibraryManagementSystem/packages.config
@@ -4,6 +4,7 @@
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net48" />
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net48" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net48" />
+  <package id="DynamicData" version="6.15.1" targetFramework="net48" />
   <package id="FreeSql" version="1.5.0" targetFramework="net48" />
   <package id="FreeSql.Provider.MySql" version="1.5.0" targetFramework="net48" />
   <package id="FreeSql.Provider.Oracle" version="1.5.0" targetFramework="net48" />
@@ -23,10 +24,13 @@
   <package id="Npgsql" version="4.1.3.1" targetFramework="net48" />
   <package id="Npgsql.LegacyPostgis" version="4.1.3" targetFramework="net48" />
   <package id="Oracle.ManagedDataAccess" version="19.7.0" targetFramework="net48" />
+  <package id="ReactiveUI" version="11.4.17" targetFramework="net48" />
+  <package id="ReactiveUI.WPF" version="11.4.17" targetFramework="net48" />
   <package id="Serilog" version="2.9.0" targetFramework="net48" />
   <package id="Serilog.Sinks.Async" version="1.4.0" targetFramework="net48" />
   <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net48" />
   <package id="Serilog.Sinks.Trace" version="2.1.0" targetFramework="net48" />
+  <package id="Splat" version="9.4.5" targetFramework="net48" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel.Composition" version="4.7.0" targetFramework="net48" />
